PROJECT(SG)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_CXX_FALGS_DEBUG "$ENV{CXXFLAGS} -o0 -Wall -g -ggdb -m64")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -o3 -Wall -m64")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/thirdparty/log4cplus-1.1.3-rc1/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/thirdparty/hiredis-master)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/thirdparty/tlib)

SET(LINUX_SRV_OUTPUT_PATH "")
IF(CMAKE_BUILD_TYPE MATCHES "Debug")
    SET(LINUX_SRV_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin_d)
    ADD_DEFINITIONS(-DDEBUG)
    MESSAGE(STATUS, "project Debug: " ${LINUX_SRV_OUTPUT_PATH})
ELSE(CMAKE_BUILD_TYPE MATCHES "Debug")
    SET(LINUX_SRV_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
    MESSAGE(STATUS, "project Release: " ${LINUX_SRV_OUTPUT_PATH})
ENDIF(CMAKE_BUILD_TYPE MATCHES "Debug")

SET(LIBRARY_OUTPUT_PATH ${LINUX_SRV_OUTPUT_PATH}/lib)

ADD_SUBDIRECTORY(sgWrappers obj/wrappers)
ADD_SUBDIRECTORY(test obj/test)

MESSAGE(STATUS, "PROJECT_SOURCE_DIR is: " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS, "LINUX_SRV_OUTPUT_PATH is: " ${LINUX_SRV_OUTPUT_PATH})
