INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers/sgConfig)

LINK_DIRECTORIES(${LINUX_SRV_OUTPUT_PATH}/lib)

SET(EXECUTABLE_OUTPUT_PATH ${LINUX_SRV_OUTPUT_PATH})
SET(SGCONFIG_SRC sgConfig_main.cc)
ADD_EXECUTABLE(sgConfig ${SGCONFIG_SRC})

TARGET_LINK_LIBRARIES(sgConfig _sgWrappers)
