INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers/sgLogger)

LINK_DIRECTORIES(${LINUX_SRV_OUTPUT_PATH}/lib)

# excute
SET(EXECUTABLE_OUTPUT_PATH ${LINUX_SRV_OUTPUT_PATH})
SET(SGLOGGER_SRC sgLogger_main.cc)
ADD_EXECUTABLE(sgLogger ${SGLOGGER_SRC})

TARGET_LINK_LIBRARIES(sgLogger _sgWrappers)
