INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers/sgLogger)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers/sgRedis)

LINK_DIRECTORIES(${LINUX_SRV_OUTPUT_PATH}/lib)

# excute
SET(EXECUTABLE_OUTPUT_PATH ${LINUX_SRV_OUTPUT_PATH})
SET(SGREDIS_SRC sgRedis_main.cc)
ADD_EXECUTABLE(sgRedis ${SGREDIS_SRC})

TARGET_LINK_LIBRARIES(sgRedis _sgWrappers)
