INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers/sgLogger)

LINK_DIRECTORIES(${LINUX_SRV_OUTPUT_PATH}/lib)

# excute
SET(EXECUTABLE_OUTPUT_PATH ${LINUX_SRV_OUTPUT_PATH})
SET(SGSHM_SRC sgShm_main.cc)
ADD_EXECUTABLE(sgShm ${SGSHM_SRC})

TARGET_LINK_LIBRARIES(sgShm _sgWrappers)
