INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/sgWrappers/sgLogger)

LINK_DIRECTORIES(${LINUX_SRV_OUTPUT_PATH}/lib)

# excute
SET(EXECUTABLE_OUTPUT_PATH ${LINUX_SRV_OUTPUT_PATH})
SET(SGWRAPPERS_SRC sgWrappers_main.cc)
ADD_EXECUTABLE(sgWrappers ${SGWRAPPERS_SRC})

TARGET_LINK_LIBRARIES(sgWrappers _sgWrappers)
